add: Google meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="google-site-verification"
+      content="OWZI6Fy4c0RyC7a1bkSY-vvqS8FL4147TJ-5UkGVY-4"
+    />
     <link
       rel="icon"
       type="image/svg+xml"
