--- a/index.html
+++ b/index.html
@@ -6,6 +6,43 @@
       name="google-site-verification"
       content="OWZI6Fy4c0RyC7a1bkSY-vvqS8FL4147TJ-5UkGVY-4"
     />
+    <meta
+      name="keywords"
+      content="Mohamed Amine Chakroun, Amine Chakroun, Mohamed Chakroun, Chakroun Mohamed Amine, Fullstack developer, développeur fullstack, portfolio, projets, compétences, réalisations"
+    />
+    <meta
+      name="description"
+      content="Découvrez le portfolio de Mohamed Amine Chakroun, aussi connu comme Amine Chakroun ou Mohamed Chakroun, développeur fullstack expérimenté. Explorez mes projets, compétences, et réalisations."
+    />
+    <meta
+      property="og:title"
+      content="Portfolio - Mohamed Amine Chakroun | Développeur Fullstack"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio de Mohamed Amine Chakroun, développeur fullstack expert. Retrouvez mes projets et compétences dans le développement web et mobile."
+    />
+
+    <!-- Microdonnées Schema.org -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Mohamed Amine Chakroun",
+        "alternateName": [
+          "Amine Chakroun",
+          "Mohamed Chakroun",
+          "Chakroun Mohamed Amine"
+        ],
+        "description": "Développeur Fullstack spécialisé en développement web et mobile.",
+        "jobTitle": "Développeur Fullstack",
+        "url": "https://votresite.github.io/",
+        "sameAs": [
+          "https://www.linkedin.com/in/mohamedaminechakroun/",
+          "https://github.com/mohamedaminechakroun"
+        ]
+      }
+    </script>
     <link
       rel="icon"
       type="image/svg+xml"
