--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         ],
         "description": "Développeur Fullstack spécialisé en développement web et mobile.",
         "jobTitle": "Développeur Fullstack",
-        "url": "https://votresite.github.io/",
+        "url": "https://github.com/Med-1-Amine-9-Chakroun",
         "sameAs": [
           "https://www.linkedin.com/in/mohamedaminechakroun/",
           "https://github.com/mohamedaminechakroun"
